[package]
name = "peregrine-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "peregrine_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
codex-arg0 = { workspace = true }
codex-exec-server = { workspace = true }
codex-feedback = { workspace = true }
codex-uds = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
peregrine-app-server = { workspace = true }
peregrine-app-server-protocol = { workspace = true }
peregrine-config = { workspace = true }
peregrine-core = { workspace = true }
peregrine-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }