[package]
name = "peregrine-attack-surface"
version.workspace = true
edition.workspace = true
description = "Attack surface inventory and heuristic findings for Sui Move packages used by Peregrine"

[dependencies]
peregrine-move-model = { workspace = true }
peregrine-object-lifecycle = { workspace = true }
serde = { workspace = true }
