[package]
name = "peregrine-audit-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Persistent audit plans, runs, and isolated workspaces"

[lints]
workspace = true

[dependencies]
peregrine-security-tools = { workspace = true }
peregrine-types = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
