[package]
name = "peregrine-bytecode-view"
version.workspace = true
edition.workspace = true
description = "Move bytecode inspection model for Peregrine"

[dependencies]
move-binary-format = { workspace = true }
move-bytecode-source-map = { workspace = true }
move-disassembler = { workspace = true }
move-ir-types = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }
