[package]
name = "peregrine-bytecode"
version.workspace = true
edition.workspace = true
description = "Move bytecode inspection views for Peregrine"

[dependencies]
move-binary-format = { workspace = true }
move-bytecode-source-map = { workspace = true }
move-decompiler = { workspace = true }
move-disassembler = { workspace = true }
move-ir-types = { workspace = true }
move-model-2 = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
wat = { workspace = true }
