[package]
name = "peregrine-helper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "peregrine-helper"
path = "src/main.rs"

[dependencies]
crossterm = { workspace = true }
move-cli = { workspace = true }
move-package-alt-compilation = { workspace = true }
peregrine-adapters = { workspace = true }
peregrine-dynamic-analysis = { workspace = true }
peregrine-helper-protocol = { workspace = true }
serde_json = { workspace = true }
sui-package-alt = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
