[package]
name = "peregrine-helper"
version.workspace = true
edition.workspace = true

[lib]
name = "peregrine_helper"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "peregrine-helper"
path = "src/main.rs"

[dependencies]
crossterm = { workspace = true }
move-cli = { workspace = true }
move-package-alt-compilation = { workspace = true }
peregrine-analysis = { workspace = true }
peregrine-sui-project-loader = { workspace = true }
peregrine-sui-adapter = { workspace = true }
peregrine-sui-move-analyzer = { workspace = true, features = ["bundled"] }
peregrine-helper-protocol = { workspace = true }
serde_json = { workspace = true }
sui-package-alt = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
