[package]
name = "peregrine-import-engine"
version.workspace = true
edition.workspace = true
description = "Buildable on-chain Move package import engine for Peregrine"

[dependencies]
hex = { workspace = true }
move-binary-format = { workspace = true }
peregrine-package-resolution = { workspace = true }
peregrine-static-analysis = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
