[package]
name = "peregrine-mcp-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "peregrine_mcp_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
http = { workspace = true }
peregrine-config = { workspace = true }
peregrine-helper-protocol = { workspace = true }
peregrine-sui-mcp-protocol = { workspace = true }
peregrine-sui-move-analyzer-mcp-protocol = { workspace = true }
peregrine-sui-move-knowledge-plugin = { workspace = true }
rmcp = { workspace = true, features = [
  "client",
  "transport-child-process",
  "transport-streamable-http-client-reqwest",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "rt-multi-thread", "time"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
