[package]
name = "peregrine-mcp-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "peregrine_mcp_protocol"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
