[package]
name = "peregrine-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "peregrine_mcp_server"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "peregrine-mcp-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
peregrine-adapters = { workspace = true }
peregrine-bytecode = { workspace = true }
peregrine-dynamic-analysis = { workspace = true }
peregrine-helper-protocol = { workspace = true }
peregrine-import-engine = { workspace = true }
peregrine-mcp-protocol = { workspace = true }
peregrine-move-graphs = { workspace = true }
peregrine-move-insights = { workspace = true }
peregrine-move-model = { workspace = true }
peregrine-scanner = { workspace = true }
peregrine-static-analysis = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-io",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
