[package]
name = "peregrine-memwal"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bcs = "0.1.6"
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls-native-roots"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true }

seal-fastcrypto = { package = "fastcrypto", git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b" }
seal-sdk-rs = { path = "../../vendor/seal-sdk-rs-0.0.8", default-features = false, features = ["client", "native-sui-sdk"] }
sui-crypto = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "49345f1ca16cee967e8d045ad965e0a764d7e95b", features = ["bech32", "ed25519"] }
sui-rpc = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "49345f1ca16cee967e8d045ad965e0a764d7e95b" }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "49345f1ca16cee967e8d045ad965e0a764d7e95b", features = ["hash", "serde"] }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "49345f1ca16cee967e8d045ad965e0a764d7e95b" }

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
