[package]
edition.workspace = true
license.workspace = true
name = "peregrine-model-provider"
version.workspace = true

[lib]
doctest = false
name = "peregrine_model_provider"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-agent-identity = { workspace = true }
codex-aws-auth = { workspace = true }
codex-feedback = { workspace = true }
codex-login = { workspace = true }
codex-model-provider-info = { workspace = true }
peregrine-models-manager = { workspace = true }
codex-otel = { workspace = true }
codex-protocol = { workspace = true }
http = { workspace = true }
peregrine-api = { workspace = true }
peregrine-client = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
