[package]
edition.workspace = true
license.workspace = true
name = "peregrine-models-manager"
version.workspace = true

[lib]
doctest = false
name = "peregrine_models_manager"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
peregrine-app-server-protocol = { workspace = true }
peregrine-types = { workspace = true }
codex-collaboration-mode-templates = { workspace = true }
codex-login = { workspace = true }
codex-utils-output-truncation = { workspace = true }
codex-utils-template = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
codex-app-server-protocol = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
