[package]
name = "peregrine-move-graphs"
version.workspace = true
edition.workspace = true
description = "Move dependency, call, type, and state graph builders for Peregrine"

[dependencies]
move-command-line-common = { workspace = true }
move-compiler = { workspace = true }
peregrine-move-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
