[package]
name = "peregrine-move-model"
version.workspace = true
edition.workspace = true
description = "Sui Move package discovery and parser-backed source model for Peregrine"

[dependencies]
move-command-line-common = { workspace = true }
move-compiler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
