[package]
name = "peregrine-plugins"
version.workspace = true
edition.workspace = true
description = "System-wide Peregrine plugin registry and runtimes"

[dependencies]
libloading = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
