[package]
name = "peregrine-project-loader"
version.workspace = true
edition.workspace = true
description = "Extensible project loading pipeline for Peregrine Move workspaces"

[dependencies]
peregrine-move-graphs = { workspace = true }
peregrine-static-analysis = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
